Update images and data

--- a/benchmark_results/pi3_benchmarks.ipynb
+++ b/benchmark_results/pi3_benchmarks.ipynb
@@ -18,7 +18,7 @@
    "display_name": "Python 3.9.6 64-bit ('.venv')"
   },
   "interpreter": {
-   "hash": "19c9558e4e6715021dd1933a257bc7013d27a2376313280492e4b20b74bd9d55"
+   "hash": "6b4885e58d23bd2d8105ce4279c1fcf47cf624e53dc9fc3b2cd98b2dde5009f2"
   }
  },
  "nbformat": 4,
@@ -41,7 +41,7 @@
     "\n",
     "%matplotlib widget\n",
     "\n",
-    "plt.rcParams[\"figure.figsize\"] = [10.00, 7.00]\n",
+    "plt.rcParams[\"figure.figsize\"] = [10.00, 5.00]\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
     "\n",
     "columns = [\"Rows\", \"QMKL64\", \"OPENBLAS64\", \"QMKL128\", \"OPENBLAS128\", \"QMKL200\", \"OPENBLAS200\", \"QMKL256\", \"OPENBLAS256\", \"QMKL320\", \"OPENBLAS320\", \"QMKL384\", \"OPENBLAS384\", \"QMKL448\", \"OPENBLAS448\", \"QMKL512\", \"OPENBLAS512\"]\n",
@@ -72,13 +72,14 @@
     "openblas448 = ax.plot(data.Rows, data.OPENBLAS448, label = \"OPENBLAS: 448 Columns\")\n",
     "openblas512 = ax.plot(data.Rows, data.OPENBLAS512, label = \"OPENBLAS: 512 Columns\")\n",
     "\n",
+    "# Toggle on/off lines\n",
     "# https://stackoverflow.com/a/31417070\n",
     "\n",
     "def interactive_legend(ax=None):\n",
     "    if ax is None:\n",
     "        ax = plt.gca()\n",
     "    if ax.legend_ is None:\n",
-    "        ax.legend(title=\"Right-click to clear lines\")\n",
+    "        ax.legend(title=\"Right-click to clear all lines\")\n",
     "\n",
     "    return InteractiveLegend(ax.get_legend())\n",
     "\n",
@@ -157,7 +158,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "output_type": "display_data",
@@ -166,7 +167,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "64d1088ce79445fdbad1997e17e4a100"
+       "model_id": "b1714d6a01a14516b0631b2072165b9c"
       }
      },
      "metadata": {}
