--- a/benchmark_results/pi0_benchmarks.ipynb
+++ b/benchmark_results/pi0_benchmarks.ipynb
@@ -18,7 +18,7 @@
    "display_name": "Python 3.9.6 64-bit ('.venv')"
   },
   "interpreter": {
-   "hash": "19c9558e4e6715021dd1933a257bc7013d27a2376313280492e4b20b74bd9d55"
+   "hash": "6b4885e58d23bd2d8105ce4279c1fcf47cf624e53dc9fc3b2cd98b2dde5009f2"
   }
  },
  "nbformat": 4,
@@ -45,7 +45,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7db9047b12cd4884b671c0df97efc1b0"
+       "model_id": "becb76ecba6c43c29b5933a8ca173a8f"
       }
      },
      "metadata": {}
@@ -57,7 +57,7 @@
     "\n",
     "%matplotlib widget\n",
     "\n",
-    "plt.rcParams[\"figure.figsize\"] = [10.00, 7.00]\n",
+    "plt.rcParams[\"figure.figsize\"] = [10.00, 5.00]\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
     "\n",
     "columns = [\"Rows\", \"QMKL64\", \"QMKL128\", \"QMKL200\", \"QMKL256\", \"QMKL320\", \"QMKL384\", \"QMKL448\", \"QMKL512\"]\n",
@@ -79,6 +79,7 @@
     "plt.xlabel(\"Matrix Rows\")\n",
     "plt.ylabel(\"Time (seconds)\")\n",
     "\n",
+    "# Toggle on/off lines\n",
     "# https://stackoverflow.com/a/31417070\n",
     "def interactive_legend(ax=None):\n",
     "    if ax is None:\n",
