Added data for various benchmarks
- Flops per watt (Pi 0 matrix multiplication)
- Tensorflow (Average Inference Time, Pi 3)

--- a/matrix_multiplication/pi3/pi3_benchmarks.ipynb
+++ b/matrix_multiplication/pi3/pi3_benchmarks.ipynb
@@ -1,39 +1,41 @@
 {
  "metadata": {
   "language_info": {
+   "name": "python",
+   "version": "3.9.7",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.6 64-bit ('.venv')"
+   "display_name": "Python 3.9.6 64-bit ('.venv': venv)"
   },
   "interpreter": {
-   "hash": "6b4885e58d23bd2d8105ce4279c1fcf47cf624e53dc9fc3b2cd98b2dde5009f2"
+   "hash": "dc115db66e812b77a96bf2587f41553f351973570974d015d0d6f1ad0c21c9cb"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
    "source": [
     "# Matrix Multiplication (SGEMM) Benchmarks\n",
     "\n",
     "## Device: Raspberry Pi 3+"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
@@ -156,30 +158,30 @@
     "leg = interactive_legend()\n",
     "plt.show()"
    ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 4,
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b1714d6a01a14516b0631b2072165b9c"
-      }
+       "model_id": "dc96460dea6f41ab94c450204dc75564"
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
      },
      "metadata": {}
     }
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ]
 }
